--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,7 +44,7 @@ jobs:
     - name: build html files
       run: |
         python -m pdoc ${{ github.event.inputs.package_name }} --html --force
-        mv "html/ezspreadsheet.html" "html/index.html"
+        mv "html/${{ github.event.inputs.package_name }}.html" "html/index.html"
         cd html
         ls
         mv ${{ github.event.inputs.package_name }}/* .
