--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,17 +1,7 @@
 name: Build new docs
 
 on:
-  workflow_dispatch:
-    inputs:
-      doc_system:
-        description: Either pdoc, or mkdocs
-        default: pdoc
-        required: true
-      project_name:
-        description: if your package is called ahd, this would be ahd
-        default: ez_img_diff
-        required: true
-
+  workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,33 +19,24 @@ jobs:
         python -m pip install .
         python -m pip install --upgrade pdoc3
         python -m pip install --upgrade mkdocs
-    # if doc_type is mkdocs
-    - name: Deploy docs
-      uses: mhausenblas/mkdocs-deploy-gh-pages@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: ${{ github.event.inputs.doc_system == 'mkdocs' }}
 
     # if doc_type is pdoc
     - name: Remove source files
       run: rm -rf *
-      if: ${{ github.event.inputs.doc_system  == 'pdoc'}}
 
     - name: build html files
       run: |
-        python -m pdoc ${{ github.event.inputs.package_name }} --html --force
-        mv "html/${{ github.event.inputs.package_name }}.html" "html/index.html"
+        python -m pdoc ez_img_diff --html --force
+        mv "html/ez_img_diff.html" "html/index.html"
         cd html
         ls
         mv ${{ github.event.inputs.package_name }}/* .
         ls
         cd ..
         ls
-      if: ${{ github.event.inputs.doc_system == 'pdoc' }}
 
     - name: Deploy Docs
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./html
-      if: ${{ github.event.inputs.doc_system == 'pdoc' }}
