--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
     - name: build html files
       run: |
         python -m pdoc ez_img_diff --html --force
-        mv /html/${{ github.event.inputs.package_name }}/* /html
+        mv html/ez_img_diff/* /html
 
     - name: Deploy Docs
       uses: peaceiris/actions-gh-pages@v3
